# alphabet_sort_analysis

./: pyproject.toml  requirements.txt  utils.py  verifying_same_data.ipynb
artefacts/: data.csv  metrics.json  updated_metrics.json
notebooks/: plotting.ipynb
src/: main.py  utils.py
