[project]
name = "alphabet_sort"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "transformers==4.37.1",
    "torch",
    "datasets",
    "hf_transfer",
    "jaxtyping"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
include = ["src/main.py"]